.work/must-gather-analysis/registry-build11-ci-openshift-org-ci-ln-vjb5l1t-stable-sha256-f89169f1cf6fd47be50038cc1c80be38e4fb997d7805094b3f6e50034f9c4c20/namespaces/openshift-cluster-version/networking.k8s.io/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    creationTimestamp: "2026-01-28T09:25:35Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:policyTypes: {}
      manager: cluster-bootstrap
      operation: Update
      time: "2026-01-28T09:25:35Z"
    name: default-deny
    namespace: openshift-cluster-version
    resourceVersion: "681"
    uid: 50062a80-6b97-4c16-b926-6a5ce4bbd32b
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
kind: NetworkPolicyList
metadata:
  resourceVersion: "34857"
